# HData

./: .auth_cache.json  .dockerignore  .gitignore  pyproject.toml  setup.py  test_get_login.py  test_ws.py
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.superpowers/sdd/: progress.md  review-final-boundaries.diff  review-final-fix.diff  review-final.diff  review-task-1-r2.diff  review-task-1.diff  review-task-2-r2.diff  review-task-2-r3.diff  review-task-2.diff  review-task-3.diff  review-task-4-r2.diff  review-task-4-r3.diff  review-task-4.diff  review-task-5-r2.diff  review-task-5.diff  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md
data/botion_js/: bcaptcha_botion.js  gct4.js  zho-tw.js
docs/: auth-research.md  captcha-flow.md  captcha-research.md  cases_backend_control.csv  cases_rigged_odds.csv  gct4-analysis.md  interview-guide.md  leyu-protocol-complete.md  login-api-capture-20260717.md  robustness-analysis.md  schema.sql  三局链式分析-20260722.md  代理接入.md  加解密逻辑全景.md  反龙局异常特征解剖-20260721.md  对外接口文档.md  平台作弊行为研判.md  平台接入机制.md  平台边界试探.md  平台运营模型推演-20260721.md  开局10秒信号检验-20260721.md  强拟合模型与强拟合区间-20260722.md  打包说明.md  数据样本.md  断龙扎堆检验-20260722.md  断龙策略回测-20260721.md  断龙路径解剖-20260722.md  最后一秒操控检验-20260721.md  极速闲龙断点分析-20260721.md  极验4验证码破解与排查.md  连胜断点分析-20260720.md  顺方金额下降条件概率-20260721.md
hdata/: client.py  proxy.py
hdata/adapters/: leyu_adapter.py
hdata/auth/: README.md  __init__.py  api.py  api_sign.py  browser_act.py  browser_login.py  captcha.py  captcha_solver.py  domain.py  fingerprint.py  geetest_signer.py  headless_login.py  http_login.py  http_login_v2.py  params.py  selectors.py  session.py  token_manager.py
hdata/capture/: direct_client.py
hdt/: __init__.py
hsys/: README.md
probes/: profile_sqlite_types.py
scripts/: __init__.py  ab_test_clicks.py  ab_test_final.py  analyze_and_test.py  analyze_chain3.py  analyze_eobj.py  analyze_streak.py  analyze_vendor_key.py  build_pyd.py  capture_cdp_bodies.py  capture_e_object.py  capture_login_data.py  capture_login_flow.py  capture_real_w.py  capture_sdk_flow.py  capture_verify_url.py  catch_sdk_w.py  catch_w.py  check_sdk.js  client_e2e_smoke.py  compare_coords.py  debug_captcha.py  debug_cards.py  debug_http_verify.py  decrypt_params.py  demo_road_monitor.py  dump_data_samples.py  exp_antikick.py  exp_antikick3.py  exp_antikick4.py  exp_kick_live.py  exp_leave_ack.py  extract_analysis_url.py  extract_api_sign.py  extract_botion_key.py  extract_geetest_keys.js  extract_geetest_keys.py  extract_static_params.py  extract_token.py  find_analysis_def.py  (+43 more)
tests/: __init__.py  conftest.py  test_adapter.py  test_decoder.py  test_dom.py  test_game_pipeline.py  test_geetest_signer.py  test_http_captcha_login.py  test_integration.py  test_monitor_tables.py  test_proxy_pool.py  test_refresh_cb.py  test_roadpaper.py  test_round_tracker.py  test_schemacodec.py  test_sources.py  test_streak_hunter.py  test_table_info.py
viewer/: analysis.html  heat.html  index.html  package.json  server.py  strategy_od.html
(+67 files in other folders)
