[build-system]
requires = ["setuptools", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdt"
version = "0.1.0"
description = "Harvester data team — data source implementations"
requires-python = "==3.13.5"
dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=49.0.0",
    "curl-cffi>=0.15.0",
    "easyocr>=1.7.2",
    "htools",
    "playwright>=1.60.0",
    "pycryptodome>=3.23.0",
    "pytesseract>=0.3.13",
    "websockets>=16.0",
]

[tool.uv.sources]
htools = { git = "https://github.com/jefftsaome/HTools.git" }

[project.entry-points."data_sources"]
cdp_source = "hdt.sources.leyu_cdp:CDPSource"
ws_source = "hdt.sources.leyu_ws:WSSource"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "cython>=3.2.6",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0,!=1.4.0",
]
