[build-system]
requires = ["setuptools", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdata"
version = "0.1.0"
description = "Harvester data team — data source implementations"
requires-python = "==3.13.5"
dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=49.0.0",
    "curl-cffi>=0.15.0",
    "cython>=3.2.6",
    "htools",
    "playwright>=1.60.0",
    "pycryptodome>=3.23.0",
    "websockets>=16.0",
]

[tool.uv.sources]
htools = { git = "https://github.com/jefftsaome/HTools.git" }

[project.entry-points."data_sources"]
cdp_source = "hdata.sources.leyu_cdp:CDPSource"
ws_source = "hdata.sources.leyu_ws:WSSource"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "viewer*", "hsys*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "cython>=3.2.6",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0,!=1.4.0",
    "setuptools>=80.0",
    "wheel>=0.45",
]
server = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
]
