[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdata"
version = "0.1.0"
description = "Harvester data team — data source implementations"
requires-python = "==3.13.*"
dependencies = [
    "aiohttp>=3.14.1",
    "cryptography>=49.0.0",
    "curl-cffi>=0.15.0",
    "htools",
    "loguru>=0.7.0",
    "playwright>=1.60.0",
    "pycryptodome>=3.23.0",
    "websockets>=16.0",
]

[project.urls]
Repository = "https://github.com/jefftsaome/HData"

[tool.uv.sources]
htools = { git = "https://github.com/jefftsaome/HTools.git" }

[project.entry-points."data_sources"]
cdp_source = "hdata.sources.leyu_cdp:CDPSource"
ws_source = "hdata.sources.leyu_ws:WSSource"

[tool.setuptools.packages.find]
where = ["."]
include = ["hdata*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "cython>=3.2.6",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0,!=1.4.0",
    "setuptools>=80.0",
    "wheel>=0.45",
]
